ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: http://gigra-game.de
  generation: 2
  name: gigra-page-redirect
  namespace: default
spec:
  rules:
  - host: www.gigra-game.de
    http:
      paths:
      - backend:
          serviceName: gigra-page
          servicePort: 80
        path: /
